--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -4,9 +4,10 @@
     tools:context=".MainActivity">
     <item android:id="@+id/action_search"
         android:title="search"
-        android:icon="@drawable/abc_ic_search_api_mtrl_alpha"
+
         app:actionViewClass="android.support.v7.widget.SearchView"
         app:showAsAction="ifRoom" />
+<!--    android:icon="@drawable/abc_ic_search_api_mtrl_alpha"-->
 
     <item android:id="@+id/action_rate"
         android:title="Rate this app"
